<resources>
    <string name="app_name">2048</string>
    <string name="menu">menu</string>
    <string name="timer">Timer</string>
    <string name="time">Time</string>
    <string name="score">Score</string>
    <string name="shortDesc">Join the numbers to the 2048 tile!</string>
    <string name="gameOver">game over!</string>
    <string name="chooseGrid">Choose your grid!</string>
    <string name="start">Start!</string>
</resources>
