<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/backgroundColor"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="100sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="casual"
        android:text="@string/chooseGrid"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/gridPreviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imgPreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backgroundColor"
                android:contentDescription="grid Preview"
                app:srcCompat="@drawable/ic_launcher_background" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGridSizeDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backgroundColor"
                android:drawableRight="@android:drawable/ic_media_rew"
                android:textAlignment="textEnd"
                android:textColor="@color/textColor"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textGridSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="4 x 4"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnGridSizeUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backgroundColor"
                android:drawableLeft="@android:drawable/ic_media_ff"
                android:textAlignment="textStart"
                android:textColor="@color/textColor"
                android:textSize="30sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLaunchGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/backgroundBtnColor"
            android:fontFamily="casual"
            android:text="@string/start"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>