<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="16dp"
              android:orientation="vertical"
              android:paddingRight="16dp"
              android:background="@color/backgroundColor"
              android:layout_weight="7"
              tools:context=".MainActivity">

    <LinearLayout
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:orientation="horizontal" android:gravity="center_vertical">

        <TextView
                android:textColor="@color/textColor"
                android:id="@+id/text_2048"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/app_name"
                android:textSize="45dp" android:gravity="center" android:fontFamily="sans-serif-smallcaps"/>

        <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="2"/>

        <TextView
                android:id="@+id/scoreView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="2"
                android:text="@string/score" android:textSize="24sp" android:textColor="@color/textColor"
                android:textStyle="bold" android:textAllCaps="true"/>

        <Chronometer
                android:id="@+id/timerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/timer" android:textSize="24sp" android:textColor="@color/textColor"
                android:textStyle="bold" android:textAllCaps="true"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:gravity="center_vertical">
        <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:textColor="@color/textColor"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shortDesc"
                android:textSize="18sp" android:fontFamily="cursive" android:textAlignment="center"/>
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backgroundColor"
                android:id="@+id/btnReload" android:gravity="center"
                android:src="@android:drawable/ic_menu_rotate"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="8" android:id="@+id/gridContainer">
        <LinearLayout
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/backgroundGridColor"
                android:paddingRight="5px" android:paddingLeft="5px" android:paddingTop="5px"
                android:paddingBottom="5px"
        >

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView7"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView15"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView16"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView14"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView74"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView154"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView164"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView144"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView70"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView150"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView160"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView140"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView71"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView151"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView161"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textView141"
                        android:layout_weight="1" android:background="@color/backgroundTileColor"
                        android:textColor="@color/textTileColor" android:text="0"
                        android:gravity="center" android:layout_marginLeft="5px" android:layout_marginTop="5px"
                        android:layout_marginRight="5px" android:layout_marginBottom="5px"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="1"/>

</LinearLayout>